--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
               black: "#131313",
               gray: "#4E4E4E",
             },
+            fontFamily: {
+              bebas:[ 'Bebas Neue', "cursive"],
+              montserrat:['Montserrat', "sans-serif"],
+            },
           },
         },
       };
@@ -20,12 +24,19 @@
     <!--  -->
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">
-      Hello world!</h1>
-    <td>table=</td>
-    <td>table</td>
+ <!-- navbar  -->
+ <nav class=" h-20 bg-white font-bebas text-2xl">
+  <div class="flex justify-between  items-center  h-20 w-full mx-auto max-w-7xl">
+    <h1>Jhaka naka production</h1>
+    <ul class="flex text-lg gap-8">
+      <li>About</li>
+      <li>Home</li>
+      <li>Our movies</li>
+    </ul>
+  </div>
 
-    <td></td>
+ </nav>
     <!-- over comfidence -->
+
   </body>
 </html>
