main section end

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </head>
   <body>
  <!-- navbar  -->
- <nav class=" h-20 bg-white font-bebas text-2xl">
-  <div class="flex justify-between  items-center  h-20 w-full mx-auto max-w-7xl">
+ <nav class=" h-20 bg-white font-bebas text-2xl fixed right-0 left-0 ">
+  <div class="flex justify-between  items-center  h-20 w-full mx-auto max-w-7xl px-5">
     <h1>Jhaka naka production</h1>
     <ul class="flex text-lg gap-8">
       <li>About</li>
@@ -36,7 +36,20 @@
   </div>
 
  </nav>
-    <!-- over comfidence -->
+    <!-- main header -->
+<section class="h-screen pt-20 bg-[url('./images/banner.jpg')] bg-cover">
+  <div class="h-full  w-full max-w-7xl mx-auto flex items-center px-5">
+    <div class="font-bebas">
+      <h2 class="text-white text-lg">Movie production studio</h2>
+      <h1 class="text-7xl text-white">Films MAde to</h1>
+      <h1 class="text-7xl text-yellow max-w-lg">Films MAde to</h1>
+      <p class="font- montserrat text-white text-base max-w-lg mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut  elit tellus, 
+        luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        <button class="font-bebas transition-all border-2 border-white hover:bg-green-600 hover:text-black py-2 px-3 text-white">Discover more</button>
+    </div>
+  </div>
+</section>
+
 
   </body>
 </html>
