--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
               gray: "#4E4E4E",
             },
             fontFamily: {
-              bebas:[ 'Bebas Neue', "cursive"],
-              montserrat:['Montserrat', "sans-serif"],
+              bebas: ["Bebas Neue", "cursive"],
+              montserrat: ["Montserrat", "sans-serif"],
             },
           },
         },
@@ -24,32 +24,81 @@
     <!--  -->
   </head>
   <body>
- <!-- navbar  -->
- <nav class=" h-20 bg-white font-bebas text-2xl fixed right-0 left-0 ">
-  <div class="flex justify-between  items-center  h-20 w-full mx-auto max-w-7xl px-5">
-    <h1>Jhaka naka production</h1>
-    <ul class="flex text-lg gap-8">
-      <li>About</li>
-      <li>Home</li>
-      <li>Our movies</li>
-    </ul>
-  </div>
-
- </nav>
+    <!-- navbar  -->
+    <nav class="h-20 bg-white font-bebas text-2xl fixed right-0 left-0">
+      <div
+        class="md:flex md:justify-between items-center h-20 w-full mx-auto max-w-7xl px-5"
+      >
+        <h1>Jhaka naka production</h1>
+        <ul class="flex text-lg gap-8">
+          <li>About</li>
+          <li>Home</li>
+          <li>Our movies</li>
+        </ul>
+      </div>
+    </nav>
     <!-- main header -->
-<section class="h-screen pt-20 bg-[url('./images/banner.jpg')] bg-cover">
-  <div class="h-full  w-full max-w-7xl mx-auto flex items-center px-5">
-    <div class="font-bebas">
-      <h2 class="text-white text-lg">Movie production studio</h2>
-      <h1 class="text-7xl text-white">Films MAde to</h1>
-      <h1 class="text-7xl text-yellow max-w-lg">Films MAde to</h1>
-      <p class="font- montserrat text-white text-base max-w-lg mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut  elit tellus, 
-        luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-        <button class="font-bebas transition-all border-2 border-white hover:bg-green-600 hover:text-black py-2 px-3 text-white">Discover more</button>
-    </div>
-  </div>
-</section>
-
-
+    <section class="h-screen pt-20 bg-[url('./images/banner.jpg')] bg-cover">
+      <div class="h-full w-full max-w-7xl mx-auto flex items-center px-5">
+        <div class="font-bebas">
+          <h2 class="text-white text-lg">Movie production studio</h2>
+          <h1 class="text-7xl text-white">Films MAde to</h1>
+          <h1 class="text-7xl text-yellow max-w-lg">Films MAde to</h1>
+          <p class="font- montserrat text-white text-base max-w-lg mb-10">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
+            tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+          </p>
+          <button
+            class="font-bebas transition-all border-2 border-white hover:bg-green-600 hover:text-black py-2 px-3 text-white"
+          >
+            Discover more
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- about us -->
+    <section class="py-40">
+      <div class="border-2 border-black w-full max-w-7xl mx-auto">
+        <div class="md:flex">
+          <div class="md:w-1/2">
+            <img class="w-full h-full" src="./images/camera-man.jpg" alt="">
+          </div>
+          <div class="md:w-1/2 p-5 md:mx-5">
+            <h3>ABOUT US</h3>
+            <h1 class="font-bebas text-7xl">FIlming Experience</h1>
+            <h1 class="font-bebas text-7xl mb-10">FIlming Experience</h1>
+            <p class="mb-10 w-80 md:w-full">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              officiis voluptates non suscipit molestiae minus temporibus
+              recusandae et explicabo! Ducimus dolorem ad, libero repudiandae
+              amet non asperiores suscipit labore alias!
+            </p>
+            <button
+              class="font-bebas transition-all border-2 border-black hover:bg-green-600 hover:text-black py-2 px-3 mb-10  text-black"
+            >
+              Discover more
+            </button>
+          </div>
+        </div>
+        <div class="md:flex justify-between ">
+        <div class="py-5 mx-5  md:w-80  ">
+          <hr class="  border-2 border-black font-semibold">
+          <h1 class="font-bebas text-lg">OUR VISION</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        </div>
+        <div class="py-5 mx-5  md:w-80  ">
+          <hr class="  border-2 border-black font-semibold">
+          <h1 class="font-bebas text-lg">OUR VISION</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        </div>
+        <div class="py-5 mx-5  md:w-80  ">
+          <hr class="  border-2 border-black font-semibold">
+          <h1 class="font-bebas text-lg">OUR VISION</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        </div>
+      </div>
+      </div>
+    </section>
+    
   </body>
 </html>
