move-collection part complete

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="border-2 border-black w-full max-w-7xl mx-auto">
         <div class="md:flex">
           <div class="md:w-1/2">
-            <img class="w-full h-full" src="./images/camera-man.jpg" alt="">
+            <img class="w-full h-full" src="./images/camera-man.jpg" alt="" />
           </div>
           <div class="md:w-1/2 p-5 md:mx-5">
             <h3>ABOUT US</h3>
@@ -74,31 +74,66 @@
               amet non asperiores suscipit labore alias!
             </p>
             <button
-              class="font-bebas transition-all border-2 border-black hover:bg-green-600 hover:text-black py-2 px-3 mb-10  text-black"
+              class="font-bebas transition-all border-2 border-black hover:bg-green-600 hover:text-black py-2 px-3 mb-10 text-black"
             >
               Discover more
             </button>
           </div>
         </div>
-        <div class="md:flex justify-between ">
-        <div class="py-5 mx-5  md:w-80  ">
-          <hr class="  border-2 border-black font-semibold">
-          <h1 class="font-bebas text-lg">OUR VISION</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        <div class="md:flex justify-between">
+          <div class="py-5 mx-5 md:w-80">
+            <hr class="border-2 border-black font-semibold" />
+            <h1 class="font-bebas text-lg">OUR VISION</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
+              tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+            </p>
+          </div>
+          <div class="py-5 mx-5 md:w-80">
+            <hr class="border-2 border-black font-semibold" />
+            <h1 class="font-bebas text-lg">OUR VISION</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
+              tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+            </p>
+          </div>
+          <div class="py-5 mx-5 md:w-80">
+            <hr class="border-2 border-black font-semibold" />
+            <h1 class="font-bebas text-lg">OUR VISION</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
+              tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+            </p>
+          </div>
         </div>
-        <div class="py-5 mx-5  md:w-80  ">
-          <hr class="  border-2 border-black font-semibold">
-          <h1 class="font-bebas text-lg">OUR VISION</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-        </div>
-        <div class="py-5 mx-5  md:w-80  ">
-          <hr class="  border-2 border-black font-semibold">
-          <h1 class="font-bebas text-lg">OUR VISION</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-        </div>
-      </div>
       </div>
     </section>
-    
+    <!-- move collection -->
+    <section class="py-20 bg-gray">
+      <div class=" max-w-7xl mx-auto">
+        <div class="md:flex justify-between items-center p-5">
+          <div>
+            <h3 class="text-white">OUR MOVIES</h3>
+            <h1 class="text-white font-bebas text-7xl">Movie collection</h1>
+          </div>
+          <div>
+            <button class="border-2 border-white py-2 px-3 text-white">See More Movies</button>
+          </div>
+        </div>
+        <div class="py-10 md:flex justify-evenly">
+          <div class="border-2 border-white md:w-[260px] h-[320px] mx-5 mb-5">
+            <img class="w-full md:w-80 h-80 m-auto p-5" src="./images/tenet.jpg" alt="">
+          </div>
+          <div class="border-2 border-white md:w-[260px] h-[320px] mx-5 mb-5 ">
+            <img class="w-full md:w-80 h-80 m-auto p-5" src="./images/tenet.jpg" alt="">
+          </div>
+          <div class="border-2 border-white md:w-[260px] h-[320px] mx-5 ">
+            <img class="w-full md:w-80 h-80 m-auto p-5" src="./images/tenet.jpg" alt="">
+          </div>
+  
+        </div>
+      </div>
+
+    </section>
   </body>
 </html>
