--- a/index.html
+++ b/index.html
@@ -110,27 +110,150 @@
     </section>
     <!-- move collection -->
     <section class="py-20 bg-gray">
-      <div class=" max-w-7xl mx-auto">
+      <div class="max-w-7xl mx-auto">
         <div class="md:flex justify-between items-center p-5">
           <div>
             <h3 class="text-white">OUR MOVIES</h3>
             <h1 class="text-white font-bebas text-7xl">Movie collection</h1>
           </div>
           <div>
-            <button class="border-2 border-white py-2 px-3 text-white">See More Movies</button>
+            <button class="border-2 border-white py-2 px-3 text-white">
+              See More Movies
+            </button>
           </div>
         </div>
         <div class="py-10 md:flex justify-evenly">
           <div class="border-2 border-white md:w-[260px] h-[320px] mx-5 mb-5">
-            <img class="w-full md:w-80 h-80 m-auto p-5" src="./images/tenet.jpg" alt="">
+            <img
+              class="w-full md:w-80 h-80 m-auto p-5"
+              src="./images/tenet.jpg"
+              alt=""
+            />
           </div>
-          <div class="border-2 border-white md:w-[260px] h-[320px] mx-5 mb-5 ">
-            <img class="w-full md:w-80 h-80 m-auto p-5" src="./images/tenet.jpg" alt="">
+          <div class="border-2 border-white md:w-[260px] h-[320px] mx-5 mb-5">
+            <img
+              class="w-full md:w-80 h-80 m-auto p-5"
+              src="./images/tenet.jpg"
+              alt=""
+            />
           </div>
-          <div class="border-2 border-white md:w-[260px] h-[320px] mx-5 ">
-            <img class="w-full md:w-80 h-80 m-auto p-5" src="./images/tenet.jpg" alt="">
+          <div class="border-2 border-white md:w-[260px] h-[320px] mx-5">
+            <img
+              class="w-full md:w-80 h-80 m-auto p-5"
+              src="./images/tenet.jpg"
+              alt=""
+            />
           </div>
-  
+        </div>
+      </div>
+    </section>
+    <!-- offer part -->
+    <section class="py-10 text-center">
+
+      <div class="max-w-7xl m-auto">
+        <h3>services</h3>
+        <h1 class="text-black font-bebas font text-3xl">what we offer</h1>
+        <div class="py-10 md:grid grid-cols-3 mx-5">
+          <div class="border-2 border-gray-600 w-full md:w-64 h-64 mb-5">
+            <img
+              class="w-20 h-20 m-auto my-3"
+              src="./images/icons/3d-glasss.png"
+              alt=""
+            />
+            <h1 class="font-bold mb-3">movies director</h1>
+            <p class="md:w-56 h-24">
+              Ex quam platea aliquet viverra si dictumst lobortis quis aliquam
+              dis eget.
+            </p>
+          </div>
+
+          <div class="border-2 border-gray-600 w-full md:w-64 h-64 mb-5">
+            <img
+              class="w-20 h-20 m-auto my-3"
+              src="./images/icons/3d-glasss.png"
+              alt=""
+            />
+            <h1 class="font-bold mb-3">movies director</h1>
+            <p class=" md:w-56 h-24">
+              Ex quam platea aliquet viverra si dictumst lobortis quis aliquam
+              dis eget.
+            </p>
+          </div>
+          <div class="border-2 border-gray-600 w-full md:w-64 h-64 mb-5">
+            <img
+              class="w-20 h-20 m-auto my-3"
+              src="./images/icons/3d-glasss.png"
+              alt=""
+            />
+            <h1 class="font-bold mb-3">movies director</h1>
+            <p class="md:w-56 h-24">
+              Ex quam platea aliquet viverra si dictumst lobortis quis aliquam
+              dis eget.
+            </p>
+          </div>
+
+          <div class="border-2 border-gray-600 w-full md:w-64 h-64 mb-5">
+            <img
+              class="w-20 h-20 m-auto my-3"
+              src="./images/icons/3d-glasss.png"
+              alt=""
+            />
+            <h1 class="font-bold mb-3">movies director</h1>
+            <p class=" md:w-56 h-24">
+              Ex quam platea aliquet viverra si dictumst lobortis quis aliquam
+              dis eget.
+            </p>
+          </div>
+          <div class="border-2 border-gray-600 w-full md:w-64 h-64 mb-5">
+            <img
+              class="w-20 h-20 m-auto my-3"
+              src="./images/icons/3d-glasss.png"
+              alt=""
+            />
+            <h1 class="font-bold mb-3">movies director</h1>
+            <p class="md:w-56 h-24">
+              Ex quam platea aliquet viverra si dictumst lobortis quis aliquam
+              dis eget.
+            </p>
+          </div>
+
+          <div class="border-2 border-gray-600 w-full md:w-64 h-64 mb-5">
+            <img
+              class="w-20 h-20 m-auto my-3"
+              src="./images/icons/3d-glasss.png"
+              alt=""
+            />
+            <h1 class="font-bold mb-3">movies director</h1>
+            <p class=" md:w-56 h-24">
+              Ex quam platea aliquet viverra si dictumst lobortis quis aliquam
+              dis eget.
+            </p>
+          </div>
+          <div class="border-2 border-gray-600 w-full md:w-64 h-64 mb-5">
+            <img
+              class="w-20 h-20 m-auto my-3"
+              src="./images/icons/3d-glasss.png"
+              alt=""
+            />
+            <h1 class="font-bold mb-3">movies director</h1>
+            <p class="md:w-56 h-24">
+              Ex quam platea aliquet viverra si dictumst lobortis quis aliquam
+              dis eget.
+            </p>
+          </div>
+
+          <div class="border-2 border-gray-600 w-full md:w-64 h-64 mb-5">
+            <img
+              class="w-20 h-20 m-auto my-3"
+              src="./images/icons/3d-glasss.png"
+              alt=""
+            />
+            <h1 class="font-bold mb-3">movies director</h1>
+            <p class=" md:w-56 h-24">
+              Ex quam platea aliquet viverra si dictumst lobortis quis aliquam
+              dis eget.
+            </p>
+          </div>
         </div>
       </div>
 
