--- a/index.html
+++ b/index.html
@@ -258,5 +258,16 @@
       </div>
 
     </section>
+    <!-- footer-part -->
+    <section class="py-10 bg-[url('./images/footer-bg.jpg')] bg-cover md:h-[400px] bg-no-repeat">
+<div class="max-w-7xl m-auto text-center text-white">
+  <h1 class="text-7xl font-bebas font-normal py-5">Jhaka naka production</h1>
+  <h2 class="text-2xl font-bebas font-normal">next level experience</h2>
+  <p class="font-montserrat text-lg">Feugiat nibh litora semper proin nullam facilisi 
+    volutpat ex ullamcorper.</p>
+  <p class="font-montserrat text-lg mt-20">Copyright © 2021 Jhaka Naka Production, All rights reserved. Present by Rakib</p>
+
+</div>
+    </section>
   </body>
 </html>
